--- a/index.html
+++ b/index.html
@@ -1,14 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Basic Meta Tags -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+
+    <!-- Title and Favicons -->
+    <title>MultiSearch | @dhsagaryt</title> 
+    <link type="image/png" sizes="16x16" rel="icon" href="assets/images/web/icons8-find-flat-icons-16.png"> 
+    <link type="image/png" sizes="32x32" rel="icon" href="assets/images/web/icons8-find-flat-icons-32.png"> 
+    <link type="image/png" sizes="96x96" rel="icon" href="assets/images/web/icons8-find-flat-icons-96.png"> 
+    <link type="image/png" sizes="72x72" rel="icon" href="assets/images/web/icons8-find-flat-icons-72.png"> 
+    <link type="image/png" sizes="96x96" rel="icon" href="assets/images/web/icons8-find-flat-icons-96.png"> 
+    <link rel="apple-touch-icon" type="image/png" sizes="57x57" href="assets/images/web/icons8-find-flat-icons-57.png"> 
+    <link rel="apple-touch-icon" type="image/png" sizes="60x60" href="assets/images/web/icons8-find-flat-icons-60.png"> 
+    <link rel="apple-touch-icon" type="image/png" sizes="72x72" href="assets/images/web/icons8-find-flat-icons-72.png"> 
+    <link rel="apple-touch-icon" type="image/png" sizes="76x76" href="assets/images/web/icons8-find-flat-icons-76.png"> 
+    <meta name="msapplication-square70x70logo" content="assets/images/web/icons8-find-flat-icons-70.png">
+    
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+
+    <!-- Main CSS File -->
+    <link rel="stylesheet" href="css/styles.css">
+
+    <!-- =======================================================
+    * Template Used: Logis by (BootstrapMade)
+    * Vendor: 1. Bootstrap v5.3.7, 
+    *         2. Bootstrap-Icon v1.13.1, 
+    *         3. AOS v2.3.4, 
+    *         4. Font Awesome v7, 
+    *         5. Swiper v11, 
+    *         6. Glightbox (v3.3.1)
+    * Author: @dhsagaryt (https://sagarmondaldev.blogspot.com/)
+    * License: https://github.com/dhsagaryt/MultiSearch/blob/main/LICENSE
+    * Updated: Aug 08 2025 with Bootstrap v5.3.7
+    ======================================================== -->
   </head>
   <body>
     Hello World!
-    <script src="index.js"></script>
+
+    <!-- Vendor JS Files -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/js/all.min.js" integrity="sha512-gBYquPLlR76UWqCwD06/xwal4so02RjIR0oyG1TIhSGwmBTRrIkQbaPehPF8iwuY9jFikDHMGEelt0DtY7jtvQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <!-- Main JS File -->
+    <script src="js/main.js"></script>
   </body>
 </html>
